@@ -1,2 +1,3 @@
 require('./core/core')
 require('./fhir/core')
+require('./vendor/core')
